--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,5 @@
 {"properties": [{
   "name": "uploadDir",
   "type": "java.lang.String",
-  "description": "A description for 'upoadDir'"
+  "description": "A description for 'uploadDir'"
 }]}
